--- a/images/index.html
+++ b/images/index.html
@@ -80,7 +80,7 @@
         </div>
     </section>
     <section id="contact">
-        <h1 class="h-primary centre">Contact us</h1>
+        <h1 class="h-primary centre">Contact </h1>
         <div id="contact-box">
             <form action="">
                 <div class="form-group">
@@ -92,7 +92,7 @@
                     <input type="email" name="email" id="email" placeholder="Enter your email">
                 </div>
                 <div class="form-group">
-                    <label for="phone no">Phone no: </label>
+                    <label for="phone no">Phone : </label>
                     <input type="phone" name="phone no" id="phone no" placeholder="Enter your phone no">
                 </div>
                 <div class="form-group">
